linking and rerouting files

--- a/flask_server/website/templates/period-display.html
+++ b/flask_server/website/templates/period-display.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Dashboard</title>
-        <link rel="stylesheet" href="period-display.css" />
-        <link rel="icon" type="image/png" href="images/projectlogo.png"/>
+        <link rel="stylesheet" href="{{url_for('static',filename='css/period-display.css')}}" />
+        <link rel="icon" type="image/png" href="{{url_for('static',filename='images/projectlogo.png')}}"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body onload="studentCount()">
 
         <section id="sidebar">
-            <img src="images/projectlogo.png" class="logo">
+            <img src="{{url_for('static',filename='images/projectlogo.png')}}" class="logo">
             <div class="items">
                 <ul>
                     <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Dashboard</a></li>
@@ -19,7 +19,7 @@
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
-                    <li><a href="/"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+                    <li><a href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
             </div>
         </section>
@@ -49,7 +49,7 @@
 
                         <tbody>
                             <tr>
-                                <td> <img src="images/profilepicturetemp.png" alt=""> LaQuesha D'Shawnte </td>
+                                <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> LaQuesha D'Shawnte </td>
                                 <td> 243658 </td>
                                 <td> 12 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -203,7 +203,7 @@
                 </div>
               
               </div>
-              <script src="add-student.js"></script>
+              <script src="{{url_for('static',filename='javascript/add-student.js')}}"></script>
         </section>
         
     </body>
