Fixing a few routes on dashboard and classes

--- a/flask_server/website/templates/classes.html
+++ b/flask_server/website/templates/classes.html
@@ -14,12 +14,12 @@
             <img src="images/projectlogo.png" class="logo">
             <div class="items">
                 <ul>
-                    <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Dashboard</a></li>
+                    <li><a href="/dashboard/"><i class="fa-solid fa-house"></i> Dashboard</a></li>
                     <li><i class="fa-solid fa-folder"></i> Classes</li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
-                    <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
+                    <li><a href="/add-student/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
-                    <li><a href="/"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+                    <li><a href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
             </div>
         </section>
@@ -30,7 +30,7 @@
             </h1>
 
             <div class="class-periods" id="class-periods-container">
-                <a href="period-display.html">
+                <a href="/periods/">
                 <div class="class-boxes">
                     <div>
                         <span>Period 1</span>
