--- a/flask_server/website/templates/dashboard.html
+++ b/flask_server/website/templates/dashboard.html
@@ -15,9 +15,9 @@
             <div class="items">
                 <ul>
                     <li><a><i class="fa-solid fa-house"></i> Dashboard</a></li>
-                    <li><a href="classes.html"><i class="fa-solid fa-folder"></i> Classes</a></li>
+                    <li><a href="/classes/"><i class="fa-solid fa-folder"></i> Classes</a></li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
-                    <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
+                    <li><a href="/add-student/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
                     <li><a href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
