updating the pathways for the website

--- a/flask_server/website/static/css/period-display.css
+++ b/flask_server/website/static/css/period-display.css
@@ -85,7 +85,7 @@ a,a:visited {
     font-weight: 700;
 }
 
-#main-content .welcome-name h1 {
+#main-content .welcome-name span {
     color: #8685ef;
     font-size: 4rem;
 }
