--- a/flask_server/website/templates/period-display.html
+++ b/flask_server/website/templates/period-display.html
@@ -14,11 +14,9 @@
             <img src="{{url_for('static',filename='images/projectlogo.png')}}" class="logo">
             <div class="items">
                 <ul>
-                    <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Dashboard</a></li>
-                    <li><a href="classes.html"><i class="fa-solid fa-folder"></i> Classes</a></li>
+                    <li><a href="/dashboard"><i class="fa-solid fa-house"></i> Dashboard</a></li>
+                    <li><a href="/classes"><i class="fa-solid fa-folder"></i> Classes</a></li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
-                    <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
-                    <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
                     <li><a href="/logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
             </div>
@@ -57,14 +55,14 @@
                             </tr>
 
                             <tr>
-                                <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Ayaan Cashapp </td>
+                                <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Ayaan Cashapp </td>
                                 <td> 247865 </td>
                                 <td> K </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             <tr>
-                                <td> <img src="images/profilepicturetemp.png" alt=""> Marcus Johnson </td>
+                                <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Marcus Johnson </td>
                                 <td> 356481 </td>
                                 <td> 7 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -72,7 +70,7 @@
                             </tr>
                             
                             <tr>
-                                <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Jasmine Patel </td>
+                                <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Jasmine Patel </td>
                                 <td> 385962 </td>
                                 <td> 3 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -80,14 +78,14 @@
                             </tr>
                             
                             <tr>
-                                <td> <img src="images/profilepicturetemp.png" alt=""> Brandon Smith </td>
+                                <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Brandon Smith </td>
                                 <td> 579846 </td>
                                 <td> 11 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             <tr>
-                                <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Olivia Nguyen </td>
+                                <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Olivia Nguyen </td>
                                 <td> 498762 </td>
                                 <td> 2 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -95,7 +93,7 @@
                             </tr>
                             
                             <tr>
-                                <td> <img src="images/profilepicturetemp.png" alt=""> Elijah James </td>
+                                <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Elijah James </td>
                                 <td> 124578 </td>
                                 <td> 10 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -103,7 +101,7 @@
                             </tr>
                             
                             <tr>
-                                <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Harper Lee </td>
+                                <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Harper Lee </td>
                                 <td> 785236 </td>
                                 <td> 5 </td>
                                 <td> <a href="Student-Information.html" class="table-link">View</a> </td>
@@ -177,7 +175,7 @@
                                                 <span class="checkmark"></span>
                                             </label> 
                                         </td>
-                                        <td> <img src="images/profilepicturetemp.png" alt=""> LaQuesha D'Shawnte </td>
+                                        <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> LaQuesha D'Shawnte </td>
                                         <td> 243658 </td>
                                         <td> 12 </td>
                                     </tr>
@@ -189,7 +187,7 @@
                                                 <span class="checkmark"></span>
                                             </label>
                                         </td>
-                                        <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Ayaan Cashapp </td>
+                                        <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Ayaan Cashapp </td>
                                         <td> 247865 </td>
                                         <td> K </td>
                                     </tr>
