--- a/flask_server/website/templates/landing.html
+++ b/flask_server/website/templates/landing.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <div class="logo"><img src="images/projectlogo.png" class="logo-image"></div>
+            <div class="logo"><img src="{{ url_for('static', filename ='images/projectlogo.png') }}" class="logo-image"></div>
             <div class="nav-items">
                 <a href="/login">Log In</a>
                 <a href="/sign-up">Sign Up</a>
