--- a/flask_server/website/templates/base.html
+++ b/flask_server/website/templates/base.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
+      <!--<button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
         data-target="#navbar"
-      >
+      >-->
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
