changed the linking

--- a/flask_server/website/templates/period-display.html
+++ b/flask_server/website/templates/period-display.html
@@ -50,7 +50,7 @@
                                 <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> LaQuesha D'Shawnte </td>
                                 <td> 243658 </td>
                                 <td> 12 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
 
@@ -58,14 +58,14 @@
                                 <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Ayaan Cashapp </td>
                                 <td> 247865 </td>
                                 <td> K </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             <tr>
                                 <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Marcus Johnson </td>
                                 <td> 356481 </td>
                                 <td> 7 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             
@@ -73,7 +73,7 @@
                                 <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Jasmine Patel </td>
                                 <td> 385962 </td>
                                 <td> 3 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             
@@ -81,14 +81,14 @@
                                 <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Brandon Smith </td>
                                 <td> 579846 </td>
                                 <td> 11 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             <tr>
                                 <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Olivia Nguyen </td>
                                 <td> 498762 </td>
                                 <td> 2 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             
@@ -96,7 +96,7 @@
                                 <td> <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt=""> Elijah James </td>
                                 <td> 124578 </td>
                                 <td> 10 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
                             
@@ -104,7 +104,7 @@
                                 <td> <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt=""> Harper Lee </td>
                                 <td> 785236 </td>
                                 <td> 5 </td>
-                                <td> <a href="Student-Information.html" class="table-link">View</a> </td>
+                                <td> <a href="/student-info" class="table-link">View</a> </td>
                                 <td id="removeButton"> <button>Remove</button> </td>
                             </tr>
 
