fixed page linking

--- a/flask_server/website/templates/classes.html
+++ b/flask_server/website/templates/classes.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Dashboard</title>
         <link rel="stylesheet" href='{{url_for('static',filename='css/classes.css')}}' />
-        <link rel="icon" type="image/png" href="images/projectlogo.png"/>
+        <link rel="icon" type="image/png" href="{{url_for('static',filename='images/projectlogo.png')}}"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
 
         <section id="sidebar">
-            <img src="images/projectlogo.png" class="logo">
+            <img src="{{url_for('static',filename='images/projectlogo.png')}}" class="logo">
             <div class="items">
                 <ul>
                     <li><a href="/dashboard/"><i class="fa-solid fa-house"></i> Dashboard</a></li>
