--- a/flask_server/website/static/css/classes.css
+++ b/flask_server/website/static/css/classes.css
@@ -148,6 +148,7 @@ a,a:visited {
     height: 100%;
     padding: 10px;
     border-radius: 30px;
+    border: none;
     font-size: 24px;
     box-shadow: 0 .4rem .8rem #0005;
 }
@@ -173,4 +174,17 @@ a,a:visited {
 
 .edit-classes-button-wrapper {
     padding: 5px 10px;
+}
+
+.create-buttons .new-class-button:active {
+    margin-right: 20px;
+    background: #cacaca;
+    color: #8685ef;
+    width: 190px;
+    height: 100%;
+    padding: 10px;
+    border-radius: 30px;
+    border: none;
+    font-size: 24px;
+    box-shadow: 0 .4rem .8rem #0005;
 }
