--- a/flask_server/website/static/css/dashboard.css
+++ b/flask_server/website/static/css/dashboard.css
@@ -159,9 +159,17 @@ body {
 }
 
 .status i {
-    color: red;
     width: 24px;
     height: auto;
+}
+
+.Present{
+    color: green;
+
+}
+
+.Absent{
+    color:Red;
 }
 
 .student-name {
