updates every few seconds

--- a/flask_server/website/templates/dashboard.html
+++ b/flask_server/website/templates/dashboard.html
@@ -6,6 +6,7 @@
         <title>Dashboard</title>
         <link rel="stylesheet" href='{{url_for('static',filename='css/dashboard.css')}}' />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </head>
     <body>
 
@@ -55,7 +56,7 @@
 
             <div class="camera-display">
                 <div class="camera-box">
-                   {% block camera %}{% endblock %}
+                    {% block camera %} {% endblock %}
                 </div>
             </div>
         </section>
@@ -64,5 +65,17 @@
                 {% block content %} {% endblock %}
             </div>
         </section>
+        <script>
+            $(document).ready(function(){
+                var counter = 3;
+            window.setInterval(function(){
+             counter--;
+              if (counter===0){
+                counter=3;
+              }
+            $("#content-right").load(" #content-right > *");
+            }, 1000);
+            });
+            </script>
     </body>
 </html>
