--- a/flask_server/website/templates/dashboard.html
+++ b/flask_server/website/templates/dashboard.html
@@ -56,7 +56,7 @@
 
             <div class="camera-display">
                 <div class="camera-box">
-                    <img src="{{ url_for('views.video') }}" width="100%">
+                    {% block camera %}{% endblock %}
                 </div>
             </div>
         </section>
