Making new databases based off username

--- a/flask_server/website/templates/dashboard.html
+++ b/flask_server/website/templates/dashboard.html
@@ -30,7 +30,7 @@
 
         <section id="main-content">
             <h1 class="welcome-name">
-                Welcome, <span style="color: #8685ef">LaQuesha</span>.
+                Welcome!
             </h1>
 
             <div class="statistics">
