hotfix for db files

--- a/flask_server/website/templates/classes.html
+++ b/flask_server/website/templates/classes.html
@@ -37,6 +37,17 @@
                     <i class="fa-solid fa-arrow-right-long"></i>
                 </div>
                 </a>
+
+                <a href="/P2/">
+                    <div class="class-boxes">
+                        <div>
+                            <span>Period 2</span>
+                            <h3># students</h3>
+                        </div>
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </div>
+                    </a>
+                
             </div>
 
             <div class="create-buttons">
