--- a/flask_server/website/templates/base.html
+++ b/flask_server/website/templates/base.html
@@ -45,7 +45,7 @@
       <button type="button" class="close" data-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
-    </div>
+    </div>>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     <div class="container">{% block content %} {% endblock %}</div>
