--- a/flask_server/website/templates/Student-Information.html
+++ b/flask_server/website/templates/Student-Information.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{{url_for('static',filename='images/projectlogo.png')}}"/>
     <title>Student Info</title>
     <link rel="stylesheet" href='{{url_for('static',filename='css/studentinformation.css')}}'>
   </head>
   <body>
     <div id="sidebar">
       <div class="logo">
-        <img src='{{url_for('static',filename='images/logo.png')}}' alt="logo" width="50" height="50">
+        <img src="{{url_for('static',filename='images/projectlogo.png')}}" class="logo">
         <h3>Dashboard</h3>
       </div>
       <ul class="items">
@@ -43,7 +44,7 @@
       <h1 class="welcome-name">Student Information</h1>
       <div class="student-info">
         <div class="student">
-          <img src='{{url_for('static',filename='images/student1.jpg')}}' alt="Student 1">
+          <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt="Student 1">
           <div class="student-details">
             <h2>John Smith</h2>
             <p>Grade: 10</p>
@@ -53,7 +54,7 @@
           </div>
         </div>
         <div class="student">
-          <img src='{{url_for('static',filename='images/student2.jpg')}}' alt="Student 2">
+          <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt="Student 2">
           <div class="student-details">
             <h2>Jane Doe</h2>
             <p>Grade: 9</p>
@@ -63,7 +64,7 @@
           </div>
         </div>
         <div class="student">
-          <img src='{{url_for('static',filename='images/student3.jpg')}}' alt="Student 3">
+          <img src="{{url_for('static',filename='images/childTantrum-168269757-770x553-1-650x428.jpeg')}}" alt="Student 3">
           <div class="student-details">
             <h2>Max Johnson</h2>
             <p>Grade: 11</p>
@@ -73,7 +74,7 @@
           </div>
         </div>
         <div class="student">
-          <img src='{{url_for('static',filename='images/student4.jpg')}}' alt="Student 4">
+          <img src="{{url_for('static',filename='images/profilepicturetemp.png')}}" alt="Student 4">
           <div class="student-details">
             <h2>Lisa Kim</h2>
             <p>Grade: 12</p>
