--- a/flask_server/website/templates/dashboard.html
+++ b/flask_server/website/templates/dashboard.html
@@ -20,9 +20,8 @@
                 </script>
                 <ul>
                     <li><a><i class="fa-solid fa-house"></i> Dashboard</a></li>
-                    <li onclick='nextPage("../classes")'><a><i class="fa-solid fa-folder"></i> Classes</a></li>
+                    <li onclick='nextPage("/classes/")'><a><i class="fa-solid fa-folder"></i> Classes</a></li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
-                    <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
                     <li><a href="/"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
                 </ul>
             </div>
